--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 	<div class="bottom-credits">
 		<p>
 			<span><span id="fairdyne">Fairdyne</span> v.0.63, by Joe Zeng.</span>
-			<span>Undertale &copy; 2015 Toby Fox.</span>
+			<span>"True" Mod by kayos156.</span>
+			<span>Undertale &copy; 2017 Toby Fox.</span>
 		</p>
 	</div>
 
