--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
 	<div class="bottom-credits">
 		<p>
-			<span><span id="fairdyne">Fairdyne</span> v.0.63, by Joe Zeng.</span>
-			<span>Legacy Mod by kayos156.</span>
-			<span>Undertale &copy; 2015 - 2017 Toby Fox.</span>
+			<span id="8-bit Operator Mono"><span id="fairdyne">Fairdyne</span> v.0.63, by Joe Zeng.</span>
+			<span id="8-bit Operator Mono">Legacy Mod by kayos156.</span>
+			<span id="8-bit Operator Mono">Undertale &copy; 2015 - 2017 Toby Fox.</span>
 		</p>
 	</div>
 
